tests/fixtures/invalid/dict_floordiv_none.py
# Cannot floor divide Dict[str, int] and None
x: dict[str, int] = {"a": 1} // None
